# ulauncher-opener

./: .pre-commit-config.yaml  LICENSE  README.md  main.py  manifest.json  pyproject.toml  requirements.txt  versions.json
tests/: test_match_arguments.py
