[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "main"
authors = [{ name = "Sander Teunissen", email = "sander.teunissen@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]


[tool.pylint.MASTER]
ignore = ["tests"]
good-names = ["dt"]
extension-pkg-whitelist = ["pydantic"]
disable = [
    "format",                     # handled by black
    "cyclic-import",
    "wrong-import-order",         # handled by isort
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "R0801",                      # duplicate lines over multiple files. silenced as it occurs for class definitions too.
    "no-self-use",                # pydantic trips over this too much
    "too-few-public-methods",
    "too-many-arguments",
    "no-self-argument",           # pydantic class method trips over this.
    "fixme",
]

[tool.isort]
profile = "black"


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict" # see here: https://pypi.org/project/pytest-asyncio/


[tool.mypy]
follow_imports = "silent"
disallow_incomplete_defs = true
ignore_missing_imports = true
show_column_numbers = true
non_interactive = true
install_types = true
